# nba2dpa

./: .clang-format  .gitignore  .gitmodules  .lvimrc  .syntastic_cpp_config  CMakeLists.txt  README.md
bench/: evil2.hoa  evil3.hoa  evil4.hoa  fair1.hoa  fair2.hoa  ghr.hoa  heuristics_blowup_simple.hoa  many_ps_sccs.hoa  michel1.hoa  michel2.hoa  michel3.hoa  michel4.hoa  michel5.hoa  ms_phi_h.hoa  topo_effect2.hoa  topo_effect3.hoa  topo_effect4.hoa  topo_effect5.hoa  topo_effect6.hoa
scripts/: autcross.rb  autcross.sh  autcrossw.rb  crossequiv.sh  csv2ltl.sh  detspeed.rb  dstar_det.sh  err.hoa  fail.hoa  genltl.sh  genrandaut.sh  ltl_dstar.sh  ltl_dstar_det.sh  ltl_nbadet.sh  ltl_nbadet_det.sh  ltl_rabinizer.sh  ltl_rabinizer_det.sh  ltl_spot.sh  ltl_spot_det.sh  ltlcross.sh  mkltl.sh  mknba.sh  pipemaxsat.rb  randaut.sh  randtests.sh  res.csv  same-language.sh  split_hoa.sh  spot_det.sh  summarize_csv.py
src/: aut.hh  ba.cc  ba.hh  bench.cc  bench.hh  debug.cc  debug.hh  det.cc  det.hh  detstate.cc  detstate.hh  dpa.cc  dpa.hh  graph.hh  interfaces.hh  io.cc  io.hh  level.cc  level.hh  memusage.c  memusage.h  nba.cc  nba.hh  nba2dot.cc  nba2dpa.cc  nbadet.cc  pa.cc  pa.hh  postproc.hh  preproc.hh  ps.cc  ps.hh  relorder.cc  relorder.hh  scc.cc  scc.hh  scratchpad.cc  swa.hh  triebimap.hh  types.hh  (+1 more)
src/common/: acceptance.hh  algo.hh  bimap.hh  graph.hh  hitset.hh  maxsat.hh  parity.hh  parityacc.hh  part_refinement.hh  relorder.cc  relorder.hh  scc.hh  trie_map.hh  triebimap.hh  types.cc  types.hh  util.hh
src/compl/: compl_constr1.hh  compl_constr2.hh  compl_constr3.hh  compl_print.hh  compl_tag.hh  compl_tests.hh
src/dev/: bench.hh  debug.cc  debug.hh  memusage.c
src/metrics/: bench.hh
src/tools/: compl.cc  nbadet.cc  nbasccinfo.cc  permsets.cc  scratchpad.cc
test/: accclasses.hoa  context.hoa  empty.hoa  evil1.hoa  evil2.hoa  evil3.hoa  evil4.hoa  evil4mod.hoa  evil5.hoa  fair1.hoa  fair2.hoa  fair3.hoa  fina.hoa  nbautils_test.cc  par.hoa  par2.hoa  par3.hoa  ps_test.hoa  scc_test.hoa  simtest.hoa  simtest2.hoa  test.hoa  test2.hoa  test_nbautils_common.cc  test_nbautils_pa.cc  test_nbautils_ps.cc  test_nbautils_scc.cc  test_nbautils_swa.cc
